[package]
name = "fractional"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers =  { version = "0.5.1", features = ["abigen"] }
ethers-flashbots = "0.4.0"
ethers-fireblocks = "0.1.1"
ethers-structopt = { git = "https://github.com/gakonst/ethers-structopt" }

once_cell = "1.8.0"
serde_json = "1.0.67"
structopt = "0.3.22"
tokio = { version = "1.10.1", features = ["macros"] }
color-eyre = "0.5.11"
url = "2.2.2"
